# algorithms_phd

./: .releaserc.yml  Cargo.toml
algorithms/: Cargo.toml
algorithms/src/: cli.rs  main.rs
exercises/: Cargo.toml
exercises/src/: aminoacid.rs  codon.rs  exercise.rs  lib.rs  nucleotide.rs
exercises/src/chap01/: e1_1_6.rs  mod.rs
