[package]
name = "algorithms_phd"
version = "0.1.0"
edition = "2021"
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
description = "A package containing solutions for the problems in the book Bioinformatics Algorithms: An Active-Learning Approach by Phillip Compeau & Pavel Pevzner."
repository = ""
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "phd", "rust"]
categories = ["algorithms", "phd", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "algorithms",
    "exercises"
]

[dependencies]
clap = { version = "4.1.4", features = ["derive", "debug", "env", "string", "unicode"] }
tempfile = "3.3.0"


[dev-dependencies]

[[bin]]
name = "algorithms"
path = "algorithms/src/main.rs"
